--- a/blogger/app/views/articles/index.html.erb
+++ b/blogger/app/views/articles/index.html.erb
@@ -5,4 +5,6 @@
     <li><%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %></li>
   <% end %>
 </ul>
+<% if logged_in? %>
 <%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
+<% end %>
