--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -13,9 +13,10 @@
 <p><%= @article.body %></p>
 
 
-
+<% if logged_in? %>
 <%= link_to "edit", edit_article_path(@article) %>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<% end %>
 
 <h3>Comments <%= @article.comments.size %></h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
